--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = []
 python = "^3.9"
 peewee = "^3.14.10"
 pyTelegramBotAPI = "^4.4.0"
+Pyrogram = "^1.4.8"
+TgCrypto = "^1.2.3"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
