--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ peewee = "^3.14.10"
 pyTelegramBotAPI = "^4.4.0"
 Pyrogram = "^1.4.8"
 TgCrypto = "^1.2.3"
+aiogram = "^2.19"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
