--- a/setup.cfg
+++ b/setup.cfg
@@ -65,6 +65,7 @@ disable=
     R0914, ; Too many local variables (m/n) (too-many-locals)
     W0511, ; TODO needed? (fixme)
     E0611, ; No name '<name>' in module '<module>' (no-name-in-module)
+    R0801, ; TEMP for command_add and command_answer
 # Maximum number of nested code blocks for function / method
 max-nested-blocks=3
 # Maximum number of branch for function / method body
